# aura-tasks-desktop

./: BUILDING.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs
src/components/: BadgesPopup.tsx  CompletionBurst.tsx  DailyRing.tsx  FocusShield.tsx  LevelUpBanner.tsx  TagFilterBar.tsx  TaskCard.tsx  XpPopup.tsx
src/lib/: api.ts  themes.ts
src/styles/: app.css
