[package]
name = "aura-tasks"
version = "0.1.0"
description = "Aura Tasks — Gamified todo app with zen aesthetics"
authors = ["Junior"]
license = "GPL-2.0"
repository = "https://github.com/ghostface-bz/aura-tasks"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
rusqlite = { version = "0.34", features = ["bundled"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
once_cell = "1.20"
regex-lite = "0.1"
